# NexusEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
Editor/: CMakeLists.txt
Editor/src/: AssetFileReference.cpp  AssetFileReference.h  ContentDrawerWidget.cpp  ContentDrawerWidget.h  EditorMaterialSerializer.cpp  EditorMaterialSerializer.h  EditorProject.h  EditorProjectBuilder.cpp  EditorProjectBuilder.h  EditorProjectRegistry.cpp  EditorProjectRegistry.h  EditorSceneApp.cpp  EditorSceneApp.h  EditorSceneSerializer.cpp  EditorSceneSerializer.h  EditorWindow.cpp  EditorWindow.h  FileExtensionInfo.cpp  FileExtensionInfo.h  InspectedTarget.h  PropertyWidget.cpp  PropertyWidget.h  QtInputBackend.h  SceneGraphWidget.cpp  SceneGraphWidget.h  SceneViewWidget.cpp  SceneViewWidget.h  main_win32.cpp
Editor/src/widgets/: ContentDrawerWidget.cpp  ContentDrawerWidget.h  PropertyWidget.cpp  PropertyWidget.h  PropertyWidgetSerializer.cpp  PropertyWidgetSerializer.h  SceneGraphWidget.cpp  SceneGraphWidget.h  SceneViewWidget.cpp  SceneViewWidget.h
Editor/src/windows/: EditorWindow.cpp  EditorWindow.h  ProjectBrowserWindow.cpp  ProjectBrowserWindow.h
Editor/templates/project/: CMakeLists.txt.in  CMakePresets.json.in  launch.vs.json.in
Editor/templates/project/src/: Game.cpp.in  main_win32.cpp.in
GameRuntime/: CMakeLists.txt  shell.html.in
GameRuntime/src/: main_web.cpp  main_win32.cpp
NexusEngine/: CMakeLists.txt
NexusEngine/docs/: QUICK_REFERENCE.cpp  RENDERING_SYSTEM.md  ROTATING_CUBE_IMPLEMENTATION.md
NexusEngine/shaders/: DefaultLit.ps.hlsl  DefaultLit.vs.hlsl  Unlit.ps.hlsl  Unlit.vs.hlsl
NexusEngine/src/: ComponentAccess.cpp  ComponentAccess.h  ComponentReflection.cpp  ComponentReflection.h  EngineComponentRegistration.h  GameLoopPhases.h  MetadataRegistry.cpp  MetadataRegistry.h  NexusEngine.cpp  NexusEngine.h  NexusEngineApi.h  ProjectSettings.h  Scene.cpp  Scene.h  SceneFileSerialization.cpp  SceneFileSerialization.h
NexusEngine/src/assets/: MaterialAsset.cpp  MaterialAsset.h
NexusEngine/src/common/: DeviceInit.cpp  DeviceInit.h  GraphicsRenderer.cpp  GraphicsRenderer.h
NexusEngine/src/common/io/: AssetGuid.cpp  AssetGuid.h  FileIO.cpp  FileIO.h
NexusEngine/src/components/: CameraComponent.h  CanvasComponent.h  EditorOnlyComponent.h  FlyCameraComponent.h  MeshComponent.h  RenderMeshComponent.h  RenderProxy.h  RenderTextureComponent.h  TransformComponent.h
NexusEngine/src/examples/: RenderingExamples.h
NexusEngine/src/filesystem/: AssetGuid.h  AssetReference.cpp  AssetReference.h  AssetReferenceRegistry.cpp  AssetReferenceRegistry.h  FileIO.h  ProjectSettingsIO.cpp  ProjectSettingsIO.h  SceneIO.cpp
NexusEngine/src/input/: InputState.h  SdlInpuBackend.h
NexusEngine/src/io/: FileIO.cpp  FileIO.h  SceneIO.cpp  SceneIO.h
NexusEngine/src/reflection/: EntityReflection.cpp  EntityReflection.h  MetadataHelpers.cpp  MetadataHelpers.h
NexusEngine/src/rendering/: GraphicsRenderer.cpp  GraphicsRenderer.h  Material.h  Mesh.h  RenderResourceFactory.cpp  RenderResourceFactory.h
NexusEngine/src/serialization/: BinarySerializer.cpp  BinarySerializer.h  EntitySerialization.cpp  EntitySerialization.h  ISerializer.h  JsonSerializer.cpp  JsonSerializer.h  ProjectSettingsSerialization.cpp  ProjectSettingsSerialization.h  SceneSerialization.cpp  SceneSerialization.h
SampleGame/: CMakeLists.txt
SampleGame/src/: Game.cpp  Game.h  GameComponents.h
tools/web-server/: package-lock.json  package.json  server.js
